src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Custom_Account_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup field to help in getting the contact owner&apos;s name into the contact object for reporting purposes.</description>
        <inlineHelpText>A lookup field to help in getting the contact owner&apos;s name into the contact object for reporting purposes.</inlineHelpText>
        <label>Custom Account Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dedupe_Hidden__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Dedupe Records (Hidden)</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name_SoundEx_Key__c</fullName>
        <label>First Name SoundEx Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_SoundEx_Key__c</fullName>
        <label>Last Name SoundEx Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Copy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A field to help us get the Account owner name (and other owner field info) for Salesforce formulas / reporting.</description>
        <inlineHelpText>A field to help us get the Account owner name (and other owner field info) for Salesforce formulas / reporting.</inlineHelpText>
        <label>Owner (Copy)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Middle_Name__pc</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Guardian1_Name__pc</columns>
        <columns>Guardian_Phone_Number__pc</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Persons Being Served</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Middle_Name__pc</columns>
        <columns>Guardian1_Name__pc</columns>
        <columns>Guardian_Phone_Number__pc</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Persons Being Served</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Middle_Name__pc</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Guardian1_Name__pc</columns>
        <columns>Guardian_Phone_Number__pc</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Person_Account</fullName>
        <active>true</active>
        <label>Person Account</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Gender_Identity_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Does_the_person_Identify__pc, &apos;Yes&apos;) &amp;&amp;       ISBLANK(Gender_Identity__pc)</errorConditionFormula>
        <errorMessage>Gender Identity is required when the person Identify with a gender other than the legal gender is Yes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_ID_Filled_In_For_NC_PBS</fullName>
        <active>true</active>
        <description>Ensures that the Other ID field is filled in for persons being served with a Mailing State of North Carolina.</description>
        <errorConditionFormula>AND(ISPICKVAL(PersonMailingStateCode , &apos;NC&apos;), OR(ISBLANK( Other_ID__pc ), ISBLANK( Other_ID_Description__pc) ), NOT(CONTAINS($User.Username,&apos;integration@thementornetwork.com&apos;)))</errorConditionFormula>
        <errorMessage>The Other ID and Other ID Description fields must be filled in for a person being served with a Mailing State of North Carolina.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_Mailing_Address_State</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  RecordType.DeveloperName =&apos;Person_Being_Served&apos;, ISBLANK(PersonMailingState))</errorConditionFormula>
        <errorDisplayField>PersonMailingState</errorDisplayField>
        <errorMessage>State is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Under_18_Requires_Guardian</fullName>
        <active>true</active>
        <description>Display an error message if the birthdate calculates to less than 18 years old, there is no Guardian on file, and for now, the username is not rory.delapaz - this should really be the integration account - to get past the upsert issue.</description>
        <errorConditionFormula>AND( 
(TODAY() - PersonBirthdate ) &lt; (18*365), 
Guardian1_Name__pc = &quot;&quot; ,
NOT($User.Username=&quot;integration@thementornetwork.com.prod&quot;)
)</errorConditionFormula>
        <errorMessage>Person Being Served is less than 18 years old. Please ensure you have added a person with the type of Guardian in the Related Parties Section below.</errorMessage>
    </validationRules>
</CustomObject>